# RL-Lean

./: ConnectionTest.py  README.md  REINFORCE.py  lean_env.py  main.py  plotting.py  policy.py  pyproject.toml  tokenizer.py
lean-stuff/: lakefile.toml
python-stuff/: ConnectionTest.py  REINFORCE.py  main.py  pyproject.toml
raid/data/lean-stuff_0d205c3735118bd3ce3850926bce4be6ac08d0b3/: metadata.json
raid/data/lean-stuff_0d205c3735118bd3ce3850926bce4be6ac08d0b3/novel_premises/: test.json  train.json  val.json
raid/data/lean-stuff_0d205c3735118bd3ce3850926bce4be6ac08d0b3/random/: test.json  train.json  val.json
raid/data/lean-stuff_2e162026d5b4bc822f8d6a961369c56832df252d/: metadata.json  traced_files.jsonl
raid/data/lean-stuff_2e162026d5b4bc822f8d6a961369c56832df252d/novel_premises/: test.json  train.json  val.json
raid/data/lean-stuff_2e162026d5b4bc822f8d6a961369c56832df252d/random/: test.json  train.json  val.json
raid/data/lean-stuff_2f0e298bc4891070b6f02acbd040a1b82936b521/: metadata.json  traced_files.jsonl
raid/data/lean-stuff_52b01d0b4dd5ad91fc2ca66be4deee76945bb7ff/: metadata.json  traced_files.jsonl
raid/data/lean-stuff_6fd1652f49b8387dcfb0b1990dfc30c273d905a9/: metadata.json
raid/data/lean-stuff_8638f860102ade2b374d24d4999d17752c2d818c/: metadata.json
raid/data/lean-stuff_95d7092786dcc222e871bf761ca82a5ef96e67cf/: metadata.json
raid/data/lean-stuff_bc07bf684fa905394ddae5d27a8f6e4dc02fd8be/: metadata.json
raid/data/lean-stuff_df2a48d4d598a6e8421962da84cd4d6e64821a03/: metadata.json
(+35 files in other folders)
